--- a/src/index.css
+++ b/src/index.css
@@ -12,25 +12,6 @@ code {
     monospace;
 }
 
-/* Footer CSS */
-.Footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
-  font-size: 24px;
-}
-
-.Footer a {
-  margin: 10px;
-  width: 30px;
-  height: 30px;
-}
-
-.Footer a svg {
-  width: 100%;
-  height: 100%;
-}
 
 /* NavBar CSS */
 nav {
@@ -43,7 +24,7 @@ nav {
   
 }
 
-a.contact-link {
+a.contact-link, a.home-link, a.portfolio-link {
   color: rgb(255, 254, 254);
   font-family: monospace;
   text-decoration: none;
@@ -92,13 +73,24 @@ nav a:hover:after {
   height: 100vh;
   background-size: cover;
   border-style: none;
+  background-image: url(../public/background.jpg);
 }
 
 
 .main-content {
   width: 100%;
   display: flex;
-  height: 600px;
+  height: 400px;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  background-size: cover;
+  border-style: none;
 }
 
 .box {
@@ -106,18 +98,117 @@ nav a:hover:after {
   padding: 20px;
   border: none;
   margin: 10px;
-
 }
 
 .title {
   font-size: 48px;
   font-weight: bold;
   margin-bottom: 20px;
-  color: #1c2237;
+  color: white;
 }
 
-.description {
+.about-me {
   font-size: 24px;
   margin-bottom: 40px;
-  color: #58616f;
+  justify-content: center;
+  align-items: center;
+  width: 600px;
+  border: solid white 1px;
+  border-style: dashed;
+  padding: 20px;
+  color: white;
+}
+
+/* Contact page CSS */
+.contact {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  text-align: center;
+}
+
+
+.contact h1 {
+  font-size: 36px;
+  margin-bottom: 10px;
+  height: 100px;
+}
+
+.contact p {
+  font-size: 18px;
+  margin-bottom: 20px;
+  height: 110px;
+}
+
+.contact-info {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.contact-info div {
+  margin-right: 20px;
+}
+
+.contact-info span {
+  font-weight: bold;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+
+button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0062cc;
+}
+
+
+/* Footer CSS */
+.Footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0px;
+  font-size: 24px;
+  color: black;
+  background-color: darkgray;
+}
+
+.Footer a {
+  margin: 10px;
+  width: 30px;
+  height: 30px;
+}
+
+.Footer a svg {
+  width: 100%;
+  height: 100%;
 }
