added some more styling to the page

--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,7 @@ nav a:hover:after {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100%;
   background-size: cover;
   border-style: none;
   background-image: url(../public/background.jpg);
@@ -114,7 +115,7 @@ nav a:hover:after {
   align-items: center;
   width: 600px;
   border: solid white 1px;
-  border-style: dashed;
+  border-style: solid;
   padding: 20px;
   color: white;
 }
@@ -132,23 +133,23 @@ nav a:hover:after {
 .contact h1 {
   font-size: 36px;
   margin-bottom: 10px;
-  height: 100px;
+  height: 75px;
 }
 
 .contact p {
   font-size: 18px;
   margin-bottom: 20px;
-  height: 110px;
+  height: 75px;
 }
 
 .contact-info {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .contact-info div {
-  margin-right: 20px;
+  margin-right: 10px;
 }
 
 .contact-info span {
@@ -170,7 +171,7 @@ input,
 textarea {
   width: 100%;
   padding: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   border-radius: 5px;
   border: 1px solid #ccc;
   font-size: 16px;
@@ -190,6 +191,12 @@ button:hover {
   background-color: #0062cc;
 }
 
+/* Portfolio CSS */
+a:visited { 
+  text-decoration: none; 
+  color: white; 
+ }
+
 
 /* Footer CSS */
 .Footer {
@@ -199,7 +206,7 @@ button:hover {
   margin-top: 0px;
   font-size: 24px;
   color: black;
-  background-color: darkgray;
+  background-color: black;
 }
 
 .Footer a {
